# mf_video_capture

./: CMakeLists.txt  README.md
example/: CMakeLists.txt  main.cpp  string_utils.cpp  string_utils.h  video_capture.cpp  video_capture.h  video_capture_engine.cpp  video_capture_engine.h  video_capture_reader.cpp  video_capture_reader.h  video_device_manager.cpp  video_device_manager.h  video_frame.h
